--- a/计费管理系统.vcxproj.filters
+++ b/计费管理系统.vcxproj.filters
@@ -21,7 +21,10 @@
     <ClCompile Include="menu.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="card.c">
+    <ClCompile Include="tool.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="card_service.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +32,19 @@
     <ClInclude Include="menu.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="card.h">
+    <ClInclude Include="tool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="card_file.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="card_service.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="global.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
