新加了文件功能

--- a/计费管理系统.vcxproj
+++ b/计费管理系统.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="card_file.c" />
     <ClCompile Include="card_service.c" />
     <ClCompile Include="menu.c" />
     <ClCompile Include="tool.c" />
