--- a/计费管理系统.vcxproj.filters
+++ b/计费管理系统.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="card_service.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="card_file.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="menu.h">
